# jacic-hash-monaca-plugin

./: .gitignore  BUILD_NDK.md  CLAUDE.md  Dockerfile.ndk  GITHUB_SETUP.md  README.md  build-ndk.sh
.github/workflows/: build-ndk.yml
cordova-plugin-jacic-hash/: .gitignore  BUILD_NDK.md  jacic-hash.gradle  package.json  plugin.xml
cordova-plugin-jacic-hash/src/android/jni/: Android.mk  jacic_hash_jni.cpp
cordova-plugin-jacic-hash/src/android/jni/JACICHashLib/: exif.c  writeHashLib.h
cordova-plugin-jacic-hash/src/android/libs/arm64-v8a/objs/jacic-hash-lib/: jacic_hash_jni.o.d
cordova-plugin-jacic-hash/src/ios/: CDVJACICHash.m
cordova-plugin-jacic-hash/src/ios/JACICHashLib/: app5.c  common.h  sha256.c
sample-app/: package.json
sample-app/www/: config.xml  index.html
sample-app/www/css/: style.css
sample-app/www/js/: app.js
src/android/: JACICHashPlugin.java
src/android/jni/: CMakeLists.txt
src/android/jni/JACICHashLib/: app1.h  exif.h  sha256.h
src/android/libs/arm64-v8a/objs/jacic-hash-lib/JACICHashLib/: app1.o.d
src/android/libs/armeabi-v7a/objs/jacic-hash-lib/: jacic_hash_jni.o.d
src/android/libs/armeabi-v7a/objs/jacic-hash-lib/JACICHashLib/: app1.o.d  app5.o.d  exif.o.d  writeHashLib.o.d
src/android/libs/x86/objs/jacic-hash-lib/: jacic_hash_jni.o.d
src/android/libs/x86/objs/jacic-hash-lib/JACICHashLib/: app1.o.d  app5.o.d  exif.o.d  sha256.o.d
src/android/libs/x86_64/objs/jacic-hash-lib/: jacic_hash_jni.o.d
src/ios/: CDVJACICHash.h
src/ios/JACICHashLib/: app1.c  app5.h  common.c  writeHashLib.c
www/: JACICHash.js
(+15 files in other folders)
